--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Studio Forum Inc.</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,9 +21,131 @@
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
+  <nav id="main-nav">
+    <ul>
+      <a href="#"><li>Home</li></a>
+      <a href="#"><li>Services</li></a>
+      <a href="#"><li>Work</li></a>
+      <a href="#"><li>About</li></a>
+      <a href="#"><li>Blog</li></a>
+      <a href="#"><li>Contact</li></a>
+    </ul>
+  </nav>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <a href="#"><h1>Studio <span class="bold">Forum</span></h1></a>
+  </header>
+
+  <div>
+    <section class="">
+      <img src="#" alt="black and white frame">
+      <h3>Studio Forum</h3>
+      <h2>Creating confident brands</h2>
+      <p>We help companies plan for the future, and build the path to get them there.</p>
+    </section>
+  </div>
+
+  <section class="">
+    <video>#</video>
+    <h3>Return on Investment</h3>
+    <h2>We are your brand's best ally</h2>
+    <img src="#" alt="dot-divider">
+    <p>The right branding strengthens employee attitudes, shapes public perception of your business, streamlines business communications and leverages operational opportunities. At Forum, we take an insights driven approach to create brands that build authentic connections, between our clients and theirs. With years of experience and a nimble approach, we help our clients win big.</p>
+    <a href="#" class="button"><h3>About Us</h3></a>
+  </section>
+
+  <section class="">
+    <img src="#" alt="Jupiter Resources Website">
+    <h2>How does a natural gas company harness their positive energy?</h2>
+    <a href="#" class="arrow-button"></a>
+  </section>
+
+  <section class="">
+    <h2>Part science. Part art.</h2>
+    <p>Getting to the heart of an organization, uncovering opportunities, and solving problems is what we do best.</p>
+    <a href="#" class="button"><h3>Our Services</h3></a>
+    <img src="#" alt="Plan icon">
+    <img src="#" alt="Create Icon">
+    <img src="#" alt="Execute Icon">
+  </section>
+
+  <div>
+    <article class="work-feature">
+      <img src="#" alt="Cito Energy Law">
+      <a href="#" class="arrow-button"></a>
+      <h2>Defining the international law landscape</h2>
+      <h3>Cito Energy Law</h3>
+    </article>
+
+    <article class="work-feature">
+        <img src="#" alt="Kidco Construction">
+        <a href="#" class="arrow-button"></a>
+        <h2>Constructing a full service offering</h2>
+        <h3>Kidco Construction</h3>
+      </article>
+
+      <article class="work-feature">
+          <img src="#" alt="Yoga Santosha Website">
+          <a href="#" class="arrow-button"></a>
+          <h2>Combining traditional and modern wellness</h2>
+          <h3>Yoga Santosha</h3>
+        </article>
+  </div>
+
+  <section>
+    <h3>In Our Clients' Words</h3>
+    <p>"I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need."</p>
+    <a href="#" class="button"><h3>Our Work</h3></a>
+    <a href=""><i></i></a>
+  </section>
+
+  <footer>
+    <div>
+      <h1>Studio <span class="bold">Forum</span></h1>
+      <ul>
+        <li>>@studio_forum</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+
+    <section class="quotes">
+      <blockquote>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</blockquote>
+      <a href="#">info@studioforum.ca</a>
+    </section>
+
+    <form>
+      <h3>Forum Musings</h3>
+      <p>Join our mailing list for all things brand, design, strategy and business</p>
+
+    </form>
+  
+    <section>
+      <h3>Studio Forum, Inc.</h3>
+      <address>
+          #302 908 17 Ave SW, Calgary AB Canada, 
+          T2T 0A3
+      </address>
+
+      <p>E. info@studioforum.ca</p>
+      <p>T. 403 669 3511</p>
+      <p>S. @studio_forum</p>
+    </section>
+
+    <div>
+      <img src="" class="social-thumb" alt="">
+      <img src="" class="social-thumb" alt="">
+      <img src="" class="social-thumb" alt="">
+      <img src="" class="social-thumb" alt="">
+      <img src="" class="social-thumb" alt="">
+      <img src="" class="social-thumb" alt="">
+    </div>
+
+  </footer>
+
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
