--- a/index.html
+++ b/index.html
@@ -12,80 +12,116 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Work+Sans:300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body class="">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <nav id="main-nav">
-    <ul>
-      <a href="#"><li>Home</li></a>
-      <a href="#"><li>Services</li></a>
-      <a href="#"><li>Work</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Blog</li></a>
-      <a href="#"><li>Contact</li></a>
-    </ul>
-  </nav>
 
-  <header>
-    <a href="#"><h1>Studio <span class="bold">Forum</span></h1></a>
+
+<!-- Main Nav Swipe Over
+========================================================================================-->
+
+<nav id="main-nav">
+  <img class="nav-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
+  <ul>
+    <a href="#"><li>Home</li></a>
+    <a href="#"><li>Services</li></a>
+    <a href="#"><li>Work</li></a>
+    <a href="#"><li>About</li></a>
+    <a href="#"><li>Blog</li></a>
+    <a href="#"><li>Contact</li></a>
+  </ul>
+</nav>
+
+<div id="page-content"> <!-- everything inside is content hidden by nav swipe-->
+
+  <!-- Fixed Header
+  ====================================================================================== -->
+
+  <header class="page-header">
+    <h1 class="visuallyhidden">Studio Forum</h1>
+    <img class="nav-icon" src="img/sf-hamburger-nav.png" alt="navigation button">
+    <a href="#"><img src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
   </header>
 
+
+
+  <!-- Fixed Left Bar
+  =======================================================================================-->
+
+  <aside id="left-bar">
+    <a href=""><img src="img/sf_insta-grey.png" alt="Instagram Icon"></a>
+    <a href=""><img src="img/sf_twitter-grey.png" alt="Twitter Icon"></a>
+    <a href=""><img src="img/sf_fb-grey.png" alt="Instagram Icon"></a>
+  </aside>
+
+
+  <!-- Begin Main Content
+  =======================================================================================-->
+
   <div>
-    <section class="">
-      <img src="#" alt="black and white frame">
+    <section class="content-frame">
       <h3>Studio Forum</h3>
       <h2>Creating confident brands</h2>
       <p>We help companies plan for the future, and build the path to get them there.</p>
     </section>
   </div>
 
-  <section class="">
-    <video>#</video>
-    <h3>Return on Investment</h3>
-    <h2>We are your brand's best ally</h2>
-    <img src="#" alt="dot-divider">
-    <p>The right branding strengthens employee attitudes, shapes public perception of your business, streamlines business communications and leverages operational opportunities. At Forum, we take an insights driven approach to create brands that build authentic connections, between our clients and theirs. With years of experience and a nimble approach, we help our clients win big.</p>
-    <a href="#" class="button"><h3>About Us</h3></a>
+  <section class="section">
+    <video src="img/forum-roi-animation-transcode.mp4" autoplay poster="img/video-frame.jpg"></video>
+    <article class="content-box">
+      <h3>Return on Investment</h3>
+      <h2>We are your brand's best ally</h2>
+      <img src="img/sf-paint-dots-p-500.png" alt="dot-divider">
+      <p>The right branding strengthens employee attitudes, shapes public perception of your business, streamlines business communications and leverages operational opportunities. At Forum, we take an insights driven approach to create brands that build authentic connections, between our clients and theirs. With years of experience and a nimble approach, we help our clients win big.</p>
+      <a href="#" class="button"><h3>About Us</h3></a>
+    </article>
   </section>
 
-  <section class="">
-    <img src="#" alt="Jupiter Resources Website">
+  <section class="hero">
+    <img src="img/sf-case-study-jupiterresources-hero.jpg" alt="Jupiter Resources Website">
+    <a href="#">
     <h2>How does a natural gas company harness their positive energy?</h2>
-    <a href="#" class="arrow-button"></a>
+    <p class="arrow-button"></p>
+    </a>
   </section>
 
-  <section class="">
-    <h2>Part science. Part art.</h2>
-    <p>Getting to the heart of an organization, uncovering opportunities, and solving problems is what we do best.</p>
-    <a href="#" class="button"><h3>Our Services</h3></a>
-    <img src="#" alt="Plan icon">
-    <img src="#" alt="Create Icon">
-    <img src="#" alt="Execute Icon">
+  <section class="section">
+    <article class="content-box">
+      <h2>Part science. Part art.</h2>
+      <p>Getting to the heart of an organization, uncovering opportunities, and solving problems is what we do best.</p>
+      <a href="#" class="button"><h3>Our Services</h3></a>
+    </article>
+    <div>
+      <img src="img/collecticon-p-500.png" alt="Plan icon">
+      <img src="img/createicon-p-500.png" alt="Create Icon">
+      <img src="img/executeicon-p-500.png" alt="Execute Icon">
+    </div>
   </section>
 
   <div>
     <article class="work-feature">
-      <img src="#" alt="Cito Energy Law">
+      <img src="img/Cito-work.jpg" alt="Cito Energy Law">
       <a href="#" class="arrow-button"></a>
       <h2>Defining the international law landscape</h2>
       <h3>Cito Energy Law</h3>
     </article>
 
     <article class="work-feature">
-        <img src="#" alt="Kidco Construction">
+        <img src="img/kidco-work.jpg" alt="Kidco Construction">
         <a href="#" class="arrow-button"></a>
         <h2>Constructing a full service offering</h2>
         <h3>Kidco Construction</h3>
       </article>
 
       <article class="work-feature">
-          <img src="#" alt="Yoga Santosha Website">
+          <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
           <a href="#" class="arrow-button"></a>
           <h2>Combining traditional and modern wellness</h2>
           <h3>Yoga Santosha</h3>
@@ -100,14 +136,14 @@
   </section>
 
   <footer>
-    <div>
-      <h1>Studio <span class="bold">Forum</span></h1>
+    <div class="social-icons">
+      <img src="img/studio-forum-logo.png" alt="Studio Forum Logo">
       <ul>
         <li>>@studio_forum</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#!"><img src="img/sf_insta_k.png" alt="Instragram Icon"></a></li>
+        <li><a href="#!"><img src="img/sf_twitter_k.png" alt="Twitter Icon"></a></li>
+        <li><a href="#!"><img src="img/sf_li_k.png" alt="LinkedIn Icon"></a></li>
+        <li><a href="#!"><img src="img/sf_fb_k.png" alt="Facebook Icon"></a></li>
       </ul>
     </div>
 
@@ -116,10 +152,13 @@
       <a href="#">info@studioforum.ca</a>
     </section>
 
-    <form>
+    <form action="#" method="post">
       <h3>Forum Musings</h3>
       <p>Join our mailing list for all things brand, design, strategy and business</p>
-
+      <p><span class="bold">Name:</span><br> <input type="text" name="name" required></p>
+      <p><span class="bold">Email Address:</span><br> <input type="text" name="email" required></p>
+      <p><input type="checkbox"> I would like to receive this e-newsletter</p>
+      <p><input type="submit" value="Submit"></p>   
     </form>
   
     <section>
@@ -145,6 +184,7 @@
 
   </footer>
 
+</div> <!--page header id-->
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
