Page Header CSS and class/id updates

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Main Nav Swipe Over
 ========================================================================================-->
 
-<nav id="main-nav">
+<nav id="main-nav" class="hidden">
   <img class="nav-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
   <ul>
     <a href="#"><li>Home</li></a>
@@ -39,20 +39,20 @@
   </ul>
 </nav>
 
-<div id="page-content"> <!-- everything inside is content hidden by nav swipe-->
+<div id="page-content"> <!-- everything inside is content hidden by nav swipe over -->
 
   <!-- Fixed Header
   ====================================================================================== -->
 
-  <header class="page-header">
+  <header id="page-header">
     <h1 class="visuallyhidden">Studio Forum</h1>
-    <img class="nav-icon" src="img/sf-hamburger-nav.png" alt="navigation button">
-    <a href="#"><img src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
+    <img id="nav-icon" src="img/sf-hamburger-nav.png" alt="navigation button">
+    <a href="#!"><img id="header-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
   </header>
 
 
 
-  <!-- Fixed Left Bar
+  <!-- Fixed Left Bar 
   =======================================================================================-->
 
   <aside id="left-bar">
