--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
   <![endif]-->
 
 
-<!-- Main Nav Swipe Over
+<!-- Main Navigation
 ========================================================================================-->
 
 <nav id="main-nav">
-  <img class="nav-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
+  <img id="nav-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
   <ul>
-    <a href="#"><li>Home</li></a>
-    <a href="#"><li>Services</li></a>
-    <a href="#"><li>Work</li></a>
-    <a href="#"><li>About</li></a>
-    <a href="#"><li>Blog</li></a>
-    <a href="#"><li>Contact</li></a>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Services</li></a></li>
+    <li><a href="#"><li>Work</a></li>
+    <li><a href="#"><li>About</a></li>
+    <li><a href="#"><li>Blog</a></li>
+    <li><a href="#"><li>Contact</a></li>
   </ul>
 </nav>
 
