--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body class="">
+<body class="nav-open">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
+
 
 
 <!-- Main Navigation
 ========================================================================================-->
 
 <nav id="main-nav">
-  <img id="nav-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
+  <img id="close-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
   <ul>
     <li><a href="#">Home</a></li>
     <li><a href="#">Services</li></a></li>
@@ -40,15 +41,25 @@
   </ul>
 </nav>
 
-<div id="page-content" class="hidden"> <!-- everything inside is content hidden by nav swipe over -->
+<!-- Fixed Logo
+========================================================================================= -->
+<a href="#!"><img id="header-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
 
-  <!-- Fixed Header
-  ====================================================================================== -->
+
+
+
+<!-- everything below this is content hidden by nav swipe over 
+========================================================================================= -->
+<div id="page-content"> 
+
+
+
+  <!-- Fixed Header Bar (no logo)
+  ======================================================================================= -->
 
   <header id="page-header">
     <h1 class="visuallyhidden">Studio Forum</h1>
     <img id="nav-icon" src="img/sf-hamburger-nav.png" alt="navigation button">
-    <a href="#!"><img id="header-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
   </header>
 
 
