Hero section painted border box styled, html adjusted

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body class="nav-open">
+<body class="">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -27,7 +27,7 @@
 
 
 <!-- Main Navigation
-========================================================================================-->
+========================================================================================= -->
 
 <nav id="main-nav">
   <img id="close-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
@@ -84,13 +84,18 @@
   <!-- Begin Main Content
   =======================================================================================-->
 
-  <div>
-    <section class="content-frame">
-      <h3>Studio Forum</h3>
-      <h2>Creating confident brands</h2>
-      <p>We help companies plan for the future, and build the path to get them there.</p>
-    </section>
-  </div>
+  <div class="hero">
+
+    <div class="paint-box-frame">
+      <section class="paint-box-frame-content">
+        <h3><span class="h3-border">Studio Forum</span></h3>
+        <h2>Creating confident brands</h2>
+        <p>We help companies plan for the future, and build the path to get them there.</p>
+      </section>
+
+    </div>
+
+  </div> <!-- End Hero wrapper-->
 
   <section class="section">
     <video src="img/forum-roi-animation-transcode.mp4" autoplay poster="img/video-frame.jpg"></video>
