started working on hero section positioning
Was not successful, stumped by image resizing and placement and how to link paint box to image not to hero class/div.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 
   <div class="hero">
 
+    <img clas="hero-img" src="img/sf-creating-confident-brands-hero.png" alt="Collage of Studio Forum hard at work creating confident brands.">
+
     <div class="paint-box-frame">
+      
       <section class="paint-box-frame-content">
         <h3><span class="h3-border">Studio Forum</span></h3>
         <h2>Creating confident brands</h2>
