--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Work+Sans:300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 
@@ -33,17 +32,17 @@
   <img id="close-icon" src="img/sf-hamburger-nav-close.png" alt="close navigation">
   <ul>
     <li><a href="#">Home</a></li>
-    <li><a href="#">Services</li></a></li>
-    <li><a href="#"><li>Work</a></li>
-    <li><a href="#"><li>About</a></li>
-    <li><a href="#"><li>Blog</a></li>
-    <li><a href="#"><li>Contact</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">Work</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Contact</a></li>
   </ul>
 </nav>
 
 <!-- Fixed Logo
 ========================================================================================= -->
-<a href="#!"><img id="header-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
+<a href="#!"><img class="sf-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
 
 
 
@@ -86,11 +85,11 @@
 
   <div class="hero">
 
-    <img clas="hero-img" src="img/sf-creating-confident-brands-hero.png" alt="Collage of Studio Forum hard at work creating confident brands.">
+    <img class="hero-img" src="img/sf-creating-confident-brands-hero.png" alt="Collage of Studio Forum hard at work creating confident brands.">
 
     <div class="paint-box-frame">
       
-      <section class="paint-box-frame-content">
+      <section class="paint-box-text">
         <h3><span class="h3-border">Studio Forum</span></h3>
         <h2>Creating confident brands</h2>
         <p>We help companies plan for the future, and build the path to get them there.</p>
@@ -100,86 +99,132 @@
 
   </div> <!-- End Hero wrapper-->
 
-  <section class="section">
-    <video src="img/forum-roi-animation-transcode.mp4" autoplay poster="img/video-frame.jpg"></video>
+  <!-- =================================================================== Video Section -->
+
+  <section class="page-section clearfix">
+    <img class="content-box" src="img/video-frame.jpg" alt="placeholder image">
     <article class="content-box">
-      <h3>Return on Investment</h3>
+      <h3><span class="h3-border">Return on Investment</span></h3>
       <h2>We are your brand's best ally</h2>
       <img src="img/sf-paint-dots-p-500.png" alt="dot-divider">
       <p>The right branding strengthens employee attitudes, shapes public perception of your business, streamlines business communications and leverages operational opportunities. At Forum, we take an insights driven approach to create brands that build authentic connections, between our clients and theirs. With years of experience and a nimble approach, we help our clients win big.</p>
-      <a href="#" class="button"><h3>About Us</h3></a>
+      <a href="#" class="button">About Us</a>
     </article>
   </section>
 
-  <section class="hero">
+  <!-- ============================================================= Case Study Section -->
+
+  <div class="case-study">
     <img src="img/sf-case-study-jupiterresources-hero.jpg" alt="Jupiter Resources Website">
     <a href="#">
-    <h2>How does a natural gas company harness their positive energy?</h2>
-    <p class="arrow-button"></p>
+      <article class="link-box">
+        <h3><span class="h3-border">Jupiter Resources</span></h3>
+        <h2>How does a natural gas company harness their positive energy?</h2>
+        <div class="arrow-button"></div>
+      </article>
     </a>
-  </section>
+  </div>
 
-  <section class="section">
+  <!-- =================================================================== Our Services -->
+
+  <section class="page-section clearfix">
     <article class="content-box">
       <h2>Part science. Part art.</h2>
       <p>Getting to the heart of an organization, uncovering opportunities, and solving problems is what we do best.</p>
-      <a href="#" class="button"><h3>Our Services</h3></a>
+      <a href="#" class="button">Our Services</a>
     </article>
-    <div>
-      <img src="img/collecticon-p-500.png" alt="Plan icon">
-      <img src="img/createicon-p-500.png" alt="Create Icon">
-      <img src="img/executeicon-p-500.png" alt="Execute Icon">
+    <div class="service-icons">
+      <figure>
+        <img src="img/collecticon-p-500.png" alt="Plan icon">
+        <figcaption>Plan</figcaption>
+      </figure>
+
+      <figure>
+        <img src="img/createicon-p-500.png" alt="Create Icon">
+        <figcaption>Create</figcaption>
+      </figure>
+
+      <figure>
+        <img src="img/executeicon-p-500.png" alt="Execute Icon">
+        <figcaption>Execute</figcaption>
+      </figure>
     </div>
   </section>
 
-  <div>
-    <article class="work-feature">
-      <img src="img/Cito-work.jpg" alt="Cito Energy Law">
-      <a href="#" class="arrow-button"></a>
-      <h2>Defining the international law landscape</h2>
-      <h3>Cito Energy Law</h3>
-    </article>
 
-    <article class="work-feature">
-        <img src="img/kidco-work.jpg" alt="Kidco Construction">
-        <a href="#" class="arrow-button"></a>
-        <h2>Constructing a full service offering</h2>
-        <h3>Kidco Construction</h3>
+  <!-- ================================================================= Featured Work -->
+
+  <section class="page-section portfolio clearfix">
+
+    <a href="#">
+      <article class="project">
+        <img src="img/Cito-work.jpg" alt="Cito Energy Law">
+        <div class="project-desc">
+          <div class="arrow-button"></div>
+          <h2>Defining the international law landscape</h2>
+          <h3><span class="h3-border">Cito Energy Law</span></h3>
+        </div>
       </article>
+    </a>
 
-      <article class="work-feature">
-          <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
-          <a href="#" class="arrow-button"></a>
+    <a href="#">
+      <article class="project">
+        <img src="img/kidco-work.jpg" alt="Kidco Construction">
+        <div class="project-desc">
+          <div class="arrow-button"></div>
+          <h2>Constructing a full service offering</h2>
+          <h3><span class="h3-border">Kidco Construction</span></h3>
+        </div>
+      </article>
+    </a>
+
+    <a href="#">      
+      <article class="project">
+        <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
+        <div class="project-desc">
+          <div class="arrow-button"></div>
           <h2>Combining traditional and modern wellness</h2>
-          <h3>Yoga Santosha</h3>
-        </article>
+          <h3><span class="h3-border">Yoga Santosha</span></h3>
+        </div>
+      </article>
+    </a>
+  </section>
+
+<!-- =================================================================== Client Reviews -->
+
+  <article class="page-section reviews">
+    <h3><span class="h3-border">In Our Clients' Words</span></h3>
+    <p>"I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need."</p>
+    <a href="#" class="button">Our Work</a>
+  </article>
+
+
+
+<!-- ===================================================================== Social Icons -->
+
+  <div class="page-section social-icons">
+    <img class="sf-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo">
+    <ul>
+      <li>@studio_forum</li>
+      <li><a href="#!"><img src="img/sf_insta_k.png" alt="Instragram Icon"></a></li>
+      <li><a href="#!"><img src="img/sf_twitter_k.png" alt="Twitter Icon"></a></li>
+      <li><a href="#!"><img src="img/sf_li_k.png" alt="LinkedIn Icon"></a></li>
+      <li><a href="#!"><img src="img/sf_fb_k.png" alt="Facebook Icon"></a></li>
+    </ul>
   </div>
 
-  <section>
-    <h3>In Our Clients' Words</h3>
-    <p>"I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need."</p>
-    <a href="#" class="button"><h3>Our Work</h3></a>
-    <a href=""><i></i></a>
-  </section>
 
-  <footer>
-    <div class="social-icons">
-      <img src="img/studio-forum-logo.png" alt="Studio Forum Logo">
-      <ul>
-        <li>@studio_forum</li>
-        <li><a href="#!"><img src="img/sf_insta_k.png" alt="Instragram Icon"></a></li>
-        <li><a href="#!"><img src="img/sf_twitter_k.png" alt="Twitter Icon"></a></li>
-        <li><a href="#!"><img src="img/sf_li_k.png" alt="LinkedIn Icon"></a></li>
-        <li><a href="#!"><img src="img/sf_fb_k.png" alt="Facebook Icon"></a></li>
-      </ul>
-    </div>
 
-    <section class="quotes">
+<!-- Begin Footer
+======================================================================================= --> 
+  <footer class="page-section page-footer clearfix">
+
+    <section class="content-box">
       <blockquote>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</blockquote>
       <a href="#">info@studioforum.ca</a>
     </section>
 
-    <form action="#" method="post">
+    <form class="content-box mailing-form" action="#" method="post">
       <h3>Forum Musings</h3>
       <p>Join our mailing list for all things brand, design, strategy and business</p>
       <p><span class="bold">Name:</span><br> <input type="text" name="name" required></p>
@@ -188,7 +233,7 @@
       <p><input type="submit" value="Submit"></p>   
     </form>
   
-    <section>
+    <section class="content-box">
       <h3>Studio Forum, Inc.</h3>
       <address>
           #302 908 17 Ave SW, Calgary AB Canada, 
@@ -200,18 +245,18 @@
       <p>S. @studio_forum</p>
     </section>
 
-    <div>
-      <img src="" class="social-thumb" alt="">
-      <img src="" class="social-thumb" alt="">
-      <img src="" class="social-thumb" alt="">
-      <img src="" class="social-thumb" alt="">
-      <img src="" class="social-thumb" alt="">
-      <img src="" class="social-thumb" alt="">
+    <div class="content-box feed">
+      <img src="#" class="social-thumb" alt="">
+      <img src="#" class="social-thumb" alt="">
+      <img src="#" class="social-thumb" alt="">
+      <img src="#" class="social-thumb" alt="">
+      <img src="#" class="social-thumb" alt="">
+      <img src="#" class="social-thumb" alt="">
     </div>
 
-  </footer>
+  </footer> 
 
-</div> <!--page header id-->
+</div> <!--End page-content id-->
 
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
