added FontAwesome back in for arrow buttons
This arrow isn't exactly right - and does not solve the fancy animated arrow on the case study, but it's a start.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Work+Sans:300,400,500,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -120,7 +121,7 @@
       <article class="link-box">
         <h3><span class="h3-border">Jupiter Resources</span></h3>
         <h2>How does a natural gas company harness their positive energy?</h2>
-        <div class="arrow-button"></div>
+        <i class="fas fa-arrow-right arrow-button"></i>
       </article>
     </a>
   </div>
@@ -160,7 +161,7 @@
       <article class="project">
         <img src="img/Cito-work.jpg" alt="Cito Energy Law">
         <div class="project-desc">
-          <div class="arrow-button"></div>
+          <i class="fas fa-arrow-right arrow-button"></i>
           <h2>Defining the international law landscape</h2>
           <h3><span class="h3-border">Cito Energy Law</span></h3>
         </div>
@@ -171,7 +172,7 @@
       <article class="project">
         <img src="img/kidco-work.jpg" alt="Kidco Construction">
         <div class="project-desc">
-          <div class="arrow-button"></div>
+          <i class="fas fa-arrow-right arrow-button"></i>
           <h2>Constructing a full service offering</h2>
           <h3><span class="h3-border">Kidco Construction</span></h3>
         </div>
@@ -182,7 +183,7 @@
       <article class="project">
         <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
         <div class="project-desc">
-          <div class="arrow-button"></div>
+          <i class="fas fa-arrow-right arrow-button"></i>
           <h2>Combining traditional and modern wellness</h2>
           <h3><span class="h3-border">Yoga Santosha</span></h3>
         </div>
@@ -196,6 +197,7 @@
     <h3><span class="h3-border">In Our Clients' Words</span></h3>
     <p>"I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need."</p>
     <a href="#" class="button">Our Work</a>
+    <i class="fas fa-chevron-right"></i>
   </article>
 
 
