--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <!-- =================================================================== Video Section -->
 
   <section class="page-section clearfix">
-    <img class="content-box" src="img/video-frame.jpg" alt="placeholder image">
-    <article class="content-box">
+    <img class="float-1-2-box" src="img/video-frame.jpg" alt="placeholder image">
+    <article class="float-1-2-box">
       <h3><span class="h3-border">Return on Investment</span></h3>
       <h2>We are your brand's best ally</h2>
       <img src="img/sf-paint-dots-p-500.png" alt="dot-divider">
@@ -129,7 +129,7 @@
   <!-- =================================================================== Our Services -->
 
   <section class="page-section clearfix">
-    <article class="content-box">
+    <article class="float-1-2-box">
       <h2>Part science. Part art.</h2>
       <p>Getting to the heart of an organization, uncovering opportunities, and solving problems is what we do best.</p>
       <a href="#" class="button">Our Services</a>
@@ -221,12 +221,12 @@
 ======================================================================================= --> 
   <footer class="page-section page-footer clearfix">
 
-    <section class="content-box">
+    <section class="float-1-2-box">
       <blockquote>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</blockquote>
       <a href="#">info@studioforum.ca</a>
     </section>
 
-    <form class="content-box mailing-form" action="#" method="post">
+    <form class="float-1-2-box mailing-form" action="#" method="post">
       <h3>Forum Musings</h3>
       <p>Join our mailing list for all things brand, design, strategy and business</p>
       <p><span class="bold">Name:</span><br> <input type="text" name="name" required></p>
@@ -235,7 +235,7 @@
       <p><input type="submit" value="Submit"></p>   
     </form>
   
-    <section class="content-box">
+    <section class="float-1-2-box">
       <h3>Studio Forum, Inc.</h3>
       <address>
           #302 908 17 Ave SW, Calgary AB Canada, 
@@ -247,13 +247,13 @@
       <p>S. @studio_forum</p>
     </section>
 
-    <div class="content-box feed">
-      <img src="#" class="social-thumb" alt="">
-      <img src="#" class="social-thumb" alt="">
-      <img src="#" class="social-thumb" alt="">
-      <img src="#" class="social-thumb" alt="">
-      <img src="#" class="social-thumb" alt="">
-      <img src="#" class="social-thumb" alt="">
+    <div class="float-1-2-box insta-feed">
+      <img src="img/insta_1.jpg" class="social-thumb" alt="mobile app Instagram Video">
+      <img src="img/insta_2.jpg" class="social-thumb" alt="Studio Meta Launch Instagram Post">
+      <img src="img/insta_3.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom">
+      <img src="img/insta_4.jpg" class="social-thumb" alt="Neuromarketing Instagram Post">
+      <img src="img/insta_5.jpg" class="social-thumb" alt="Kidco Highlight Instagram Post">
+      <img src="img/insta_6.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom">
     </div>
 
   </footer> 
