Updated Insta Image sizes, CSS style for insta hover

--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
 ======================================================================================= --> 
   <footer class="page-section page-footer clearfix">
 
-    <section class="float-1-2-box">
-      <blockquote>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</blockquote>
+    <section class="float-1-4-box">
+      <p>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</p>
       <a href="#">info@studioforum.ca</a>
     </section>
 
-    <form class="float-1-2-box mailing-form" action="#" method="post">
+    <form class="float-1-4-box mailing-form" action="#" method="post">
       <h3>Forum Musings</h3>
       <p>Join our mailing list for all things brand, design, strategy and business</p>
       <p><span class="bold">Name:</span><br> <input type="text" name="name" required></p>
@@ -235,7 +235,7 @@
       <p><input type="submit" value="Submit"></p>   
     </form>
   
-    <section class="float-1-2-box">
+    <section class="float-1-4-box">
       <h3>Studio Forum, Inc.</h3>
       <address>
           #302 908 17 Ave SW, Calgary AB Canada, 
@@ -247,15 +247,45 @@
       <p>S. @studio_forum</p>
     </section>
 
-    <div class="float-1-2-box insta-feed">
-      <img src="img/insta_1.jpg" class="social-thumb" alt="mobile app Instagram Video">
-      <img src="img/insta_2.jpg" class="social-thumb" alt="Studio Meta Launch Instagram Post">
-      <img src="img/insta_3.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom">
-      <img src="img/insta_4.jpg" class="social-thumb" alt="Neuromarketing Instagram Post">
-      <img src="img/insta_5.jpg" class="social-thumb" alt="Kidco Highlight Instagram Post">
-      <img src="img/insta_6.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom">
-    </div>
+    <div class="float-1-4-box">
+        
+      <a href="#!">
+        <div class="mint-hover-img">
+          <img src="img/insta_1.jpg" class="social-thumb" alt="mobile app Instagram Video"></a>
+        </div>
+      </a>
 
+      <a href="#!">
+        <div class="mint-hover-img">
+          <img src="img/insta_2.jpg" class="social-thumb" alt="Studio Meta Launch Instagram Post"></a>
+        </div>
+      </a>
+
+      <a href="#!">
+        <div class="mint-hover-img">
+          <img src="img/insta_3.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom"></a>
+        </div>
+      </a>
+
+      <a href="#!">
+        <div class="mint-hover-img">
+          <img src="img/insta_4.jpg" class="social-thumb" alt="Neuromarketing Instagram Post"></a>
+        </div>
+      </a>
+  
+      <a href="#!">
+        <div class="mint-hover-img">
+          <img src="img/insta_5.jpg" class="social-thumb" alt="Kidco Highlight Instagram Post"></a>
+        </div>
+      </a>
+
+      <a href="#!">
+        <div class="mint-hover-img">
+          <img src="img/insta_6.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom"></a>
+        </div>
+      </a>
+
+    </div>
   </footer> 
 
 </div> <!--End page-content id-->
