added max-width to page-section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 <!-- =================================================================== Client Reviews -->
 
-  <article class="page-section reviews">
+  <article class="reviews">
     <h3><span class="h3-border">In Our Clients' Words</span></h3>
     <p>"I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need."</p>
     <a href="#" class="button">Our Work</a>
