Still trying to figure out this paint box line main image positioning

--- a/index.html
+++ b/index.html
@@ -94,11 +94,10 @@
         <h2>Creating confident brands</h2>
         <p>We help companies plan for the future, and build the path to get them there.</p>
       </section>
+      <div class="decorative-line"></div>
     </div>
 
-    <div class="decorative-line"></div>
-
-  </div> <!-- End Hero wrapper-->
+  </div>
 
   <!-- =================================================================== Video Section -->
 
