ROI Section styled but still not perfect.

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
   <!-- =================================================================== Video Section -->
 
   <section class="page-section clearfix">
-    <img class="float-1-2-box" src="img/video-frame.jpg" alt="placeholder image">
+    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350" width="auto" poster="img/video-frame.jpg">
+    </video>
     <article class="float-1-2-box">
       <h3><span class="h3-border">Return on Investment</span></h3>
       <h2>We are your brand's best ally</h2>
-      <img src="img/sf-paint-dots-p-500.png" alt="dot-divider">
+          <div class="dot-divider"></div>
       <p>The right branding strengthens employee attitudes, shapes public perception of your business, streamlines business communications and leverages operational opportunities. At Forum, we take an insights driven approach to create brands that build authentic connections, between our clients and theirs. With years of experience and a nimble approach, we help our clients win big.</p>
       <a href="#" class="button">About Us</a>
     </article>
