footer changes. Started working on project boxes.

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 
 <!-- ===================================================================== Social Icons -->
 
-  <div class="page-section social-icons">
-    <img class="sf-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo">
+  <div class="social-icons">
+    <img class="footer-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo">
     <ul>
       <li>@studio_forum</li>
       <li><a href="#!"><img src="img/sf_insta_k.png" alt="Instragram Icon"></a></li>
@@ -221,7 +221,7 @@
 
 <!-- Begin Footer
 ======================================================================================= --> 
-  <footer class="page-section page-footer clearfix">
+  <footer class="page-footer clearfix">
 
     <section class="float-1-4-box">
       <p>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</p>
@@ -229,7 +229,7 @@
     </section>
 
     <form class="float-1-4-box mailing-form" action="#" method="post">
-      <h3>Forum Musings</h3>
+      <h3><span class="h3-border">Forum Musings</span></h3>
       <p>Join our mailing list for all things brand, design, strategy and business</p>
       <p><span class="bold">Name:</span><br> <input type="text" name="name" required></p>
       <p><span class="bold">Email Address:</span><br> <input type="text" name="email" required></p>
@@ -238,7 +238,7 @@
     </form>
   
     <section class="float-1-4-box">
-      <h3>Studio Forum, Inc.</h3>
+      <h3><span class="h3-border">tudio Forum, Inc.</span></h3>
       <address>
           #302 908 17 Ave SW, Calgary AB Canada, 
           T2T 0A3
