still cant figure out project boxes. Fiddled with footer.

--- a/index.html
+++ b/index.html
@@ -157,40 +157,44 @@
 
   <!-- ================================================================= Featured Work -->
 
-  <section class="page-section portfolio clearfix">
+  <section class="page-section clearfix">
 
-    <a href="#">
-      <article class="project">
-        <img src="img/Cito-work.jpg" alt="Cito Energy Law">
-        <div class="project-desc">
-          <i class="fas fa-arrow-right arrow-button"></i>
-          <h2>Defining the international law landscape</h2>
-          <h3><span class="h3-border">Cito Energy Law</span></h3>
-        </div>
-      </article>
-    </a>
+    <div class="portfolio">
 
-    <a href="#">
-      <article class="project">
-        <img src="img/kidco-work.jpg" alt="Kidco Construction">
-        <div class="project-desc">
-          <i class="fas fa-arrow-right arrow-button"></i>
-          <h2>Constructing a full service offering</h2>
-          <h3><span class="h3-border">Kidco Construction</span></h3>
-        </div>
-      </article>
-    </a>
+      <a href="#">
+        <article class="project">
+          <img src="img/Cito-work.jpg" alt="Cito Energy Law">
+          <div class="project-desc">
+            <i class="fas fa-arrow-right arrow-button"></i>
+            <h2>Defining the international law landscape</h2>
+            <h3><span class="h3-border">Cito Energy Law</span></h3>
+          </div>
+        </article>
+      </a>
 
-    <a href="#">      
-      <article class="project">
-        <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
-        <div class="project-desc">
-          <i class="fas fa-arrow-right arrow-button"></i>
-          <h2>Combining traditional and modern wellness</h2>
-          <h3><span class="h3-border">Yoga Santosha</span></h3>
-        </div>
-      </article>
-    </a>
+      <a href="#">
+        <article class="project">
+          <img src="img/kidco-work.jpg" alt="Kidco Construction">
+          <div class="project-desc">
+            <i class="fas fa-arrow-right arrow-button"></i>
+            <h2>Constructing a full service offering</h2>
+            <h3><span class="h3-border">Kidco Construction</span></h3>
+          </div>
+        </article>
+      </a>
+
+      <a href="#">      
+        <article class="project">
+          <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
+          <div class="project-desc">
+            <i class="fas fa-arrow-right arrow-button"></i>
+            <h2>Combining traditional and modern wellness</h2>
+            <h3><span class="h3-border">Yoga Santosha</span></h3>
+          </div>
+        </article>
+      </a>
+
+    </div>
   </section>
 
 <!-- =================================================================== Client Reviews -->
@@ -208,7 +212,7 @@
 
   <div class="social-icons">
     <img class="footer-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo">
-    <ul>
+    <ul class="icon-grp">
       <li>@studio_forum</li>
       <li><a href="#!"><img src="img/sf_insta_k.png" alt="Instragram Icon"></a></li>
       <li><a href="#!"><img src="img/sf_twitter_k.png" alt="Twitter Icon"></a></li>
