Cleaned up case study section; started services section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
   <!-- ============================================================= Case Study Section -->
 
   <div class="case-study">
-    <img src="img/sf-case-study-jupiterresources-hero.jpg" alt="Jupiter Resources Website">
     
     <a href="#">
       <article class="link-box">
@@ -130,7 +129,7 @@
 
   <!-- =================================================================== Our Services -->
 
-  <section class="page-section clearfix">
+  <section class="page-section-less-padding clearfix">
     <article class="float-1-2-box">
       <h2>Part science. Part art.</h2>
       <p>Getting to the heart of an organization, uncovering opportunities, and solving problems is what we do best.</p>
