portfolio section fixed

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 
   <!-- ================================================================= Featured Work -->
 
-  <section class="page-section clearfix">
+  <section class="page-section-less-padding portfolio">
 
-    <div class="portfolio">
+    <div class="col-flex-3">
 
       <a href="#">
         <article class="project">
-          <img src="img/Cito-work.jpg" alt="Cito Energy Law">
+          <img class="object-fit-cover" src="img/Cito-work.jpg" alt="Cito Energy Law">
           <div class="project-desc">
             <i class="fas fa-arrow-right arrow-button"></i>
             <h2>Defining the international law landscape</h2>
@@ -173,7 +173,7 @@
 
       <a href="#">
         <article class="project">
-          <img src="img/kidco-work.jpg" alt="Kidco Construction">
+          <img class="object-fit-cover" src="img/kidco-work.jpg" alt="Kidco Construction">
           <div class="project-desc">
             <i class="fas fa-arrow-right arrow-button"></i>
             <h2>Constructing a full service offering</h2>
@@ -184,7 +184,7 @@
 
       <a href="#">      
         <article class="project">
-          <img src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
+          <img class="object-fit-cover" src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
           <div class="project-desc">
             <i class="fas fa-arrow-right arrow-button"></i>
             <h2>Combining traditional and modern wellness</h2>
