Reviews Section Refined.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
   <article class="reviews">
     <h3><span class="h3-border">In Our Clients' Words</span></h3>
-    <p>"I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need."</p>
+    <p><q>I've always felt they offer great quality. I enjoy them a lot, and feel they really understand me and my style and what I need.</q></p>
     <a href="#" class="button">Our Work</a>
     <i class="fas fa-chevron-right"></i>
   </article>
