got arrow css arrow buttons on portfolio images - they don't work quite yet.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@
         <article class="project">
           <img class="object-fit-cover" src="img/Cito-work.jpg" alt="Cito Energy Law">
           <div class="project-desc">
-            <i class="fas fa-arrow-right arrow-button"></i>
+            <div class="arrow-button">
+              <div class="arrowstem"></div>
+              <div class="arrowhead"></div>
+            </div>
             <h2>Defining the international law landscape</h2>
             <h3><span class="h3-border">Cito Energy Law</span></h3>
           </div>
@@ -175,7 +178,10 @@
         <article class="project">
           <img class="object-fit-cover" src="img/kidco-work.jpg" alt="Kidco Construction">
           <div class="project-desc">
-            <i class="fas fa-arrow-right arrow-button"></i>
+            <div class="arrow-button">
+              <div class="arrowstem"></div>
+              <div class="arrowhead"></div>
+            </div>
             <h2>Constructing a full service offering</h2>
             <h3><span class="h3-border">Kidco Construction</span></h3>
           </div>
@@ -186,7 +192,10 @@
         <article class="project">
           <img class="object-fit-cover" src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
           <div class="project-desc">
-            <i class="fas fa-arrow-right arrow-button"></i>
+            <div class="arrow-button">
+              <div class="arrowstem"></div>
+              <div class="arrowhead"></div>
+            </div>
             <h2>Combining traditional and modern wellness</h2>
             <h3><span class="h3-border">Yoga Santosha</span></h3>
           </div>
