Finally! fixed the hero section. Also working on fixing the side margin issues

--- a/index.html
+++ b/index.html
@@ -85,17 +85,16 @@
   =======================================================================================-->
 
   <div class="hero">
-
-    <img class="hero-img" src="img/sf-creating-confident-brands-hero.png" alt="Collage of Studio Forum hard at work creating confident brands.">
-  
+    <div class="hero-img"></div>
     <div class="paint-box-frame">
       <section class="paint-box-text">
         <h3><span class="h3-border">Studio Forum</span></h3>
         <h2>Creating confident brands</h2>
         <p>We help companies plan for the future, and build the path to get them there.</p>
       </section>
-      <div class="decorative-line"></div>
     </div>
+    <div class="decorative-line"></div>
+  </div>
 
   </div>
 
