adjusting spacing on the site

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- =================================================================== Video Section -->
 
   <section class="page-section clearfix">
-    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350" width="auto" poster="img/video-frame.jpg">
+    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350px" width="730px" poster="img/video-frame.jpg">
     </video>
     <article class="float-1-2-box">
       <h3><span class="h3-border">Return on Investment</span></h3>
@@ -119,8 +119,11 @@
     <a href="#">
       <article class="link-box">
         <h3><span class="h3-border">Jupiter Resources</span></h3>
-        <h2>How does a natural gas company harness their positive energy?</h2>
-        <i class="fas fa-arrow-right arrow-button"></i>
+        <p>How does a natural gas company harness their positive energy?</p>
+        <div class="arrow-button">
+          <div class="arrowstem"></div>
+          <div class="arrowhead"></div>
+        </div>
       </article>
     </a>
   
