changes to validate code

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- =================================================================== Video Section -->
 
   <section class="page-section clearfix">
-    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350px" width="730px" poster="img/video-frame.jpg">
+    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350" width="730" poster="img/video-frame.jpg">
     </video>
     <article class="float-1-2-box">
       <h3><span class="h3-border">Return on Investment</span></h3>
@@ -267,37 +267,37 @@
         
       <a href="#!">
         <div class="mint-hover-img">
-          <img src="img/insta_1.jpg" class="social-thumb" alt="mobile app Instagram Video"></a>
+          <img src="img/insta_1.jpg" class="social-thumb" alt="mobile app Instagram Video">
         </div>
       </a>
 
       <a href="#!">
         <div class="mint-hover-img">
-          <img src="img/insta_2.jpg" class="social-thumb" alt="Studio Meta Launch Instagram Post"></a>
+          <img src="img/insta_2.jpg" class="social-thumb" alt="Studio Meta Launch Instagram Post">
         </div>
       </a>
 
       <a href="#!">
         <div class="mint-hover-img">
-          <img src="img/insta_3.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom"></a>
+          <img src="img/insta_3.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom">
         </div>
       </a>
 
       <a href="#!">
         <div class="mint-hover-img">
-          <img src="img/insta_4.jpg" class="social-thumb" alt="Neuromarketing Instagram Post"></a>
+          <img src="img/insta_4.jpg" class="social-thumb" alt="Neuromarketing Instagram Post">
         </div>
       </a>
   
       <a href="#!">
         <div class="mint-hover-img">
-          <img src="img/insta_5.jpg" class="social-thumb" alt="Kidco Highlight Instagram Post"></a>
+          <img src="img/insta_5.jpg" class="social-thumb" alt="Kidco Highlight Instagram Post">
         </div>
       </a>
 
       <a href="#!">
         <div class="mint-hover-img">
-          <img src="img/insta_6.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom"></a>
+          <img src="img/insta_6.jpg" class="social-thumb" alt="Studio Forum Instagram Wisdom">
         </div>
       </a>
 
