--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- =================================================================== Video Section -->
 
   <section class="page-section clearfix">
-    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350" width="730" poster="img/video-frame.jpg">
+    <video class="float-1-2-box" src="img/forum-roi-animation-transcode.mp4" autoplay height="350" width="730" poster="img/video-frame.jpg" loop>
     </video>
     <article class="float-1-2-box">
       <h3><span class="h3-border">Return on Investment</span></h3>
