Code Refractoring and Refinement

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 
-  <!-- everything below this is content hidden by nav swipe over 
+  <!-- everything below this is content hidden by nav when open 
   ========================================================================================= -->
   <main id="page-content"> 
 
@@ -75,9 +75,9 @@
     <aside>
 
       <div id="left-bar-social">
-        <a href="#!"><div class="insta-icon"></div></a>
-        <a href="#!"><div class="tw-icon"></div></a>
-        <a href="#!"><div class="fb-icon"></div></a>
+        <a href="#!"><div class="insta-icon-grey"></div></a>
+        <a href="#!"><div class="tw-icon-grey"></div></a>
+        <a href="#!"><div class="fb-icon-grey"></div></a>
       </div>
 
       <div id="left-bar-email">
@@ -131,8 +131,7 @@
           <p><span class="small-header">Jupiter Resources</span></p>
           <p>How does a natural gas company harness their positive energy?</p>
           <div class="arrow-button">
-            <div class="arrowstem"></div>
-            <div class="arrowhead"></div>
+            <div class="arrow"></div>
           </div>
         </article>
       </a>
@@ -180,8 +179,7 @@
             <img class="object-fit-cover" src="img/Cito-work.jpg" alt="Cito Energy Law">
             <div class="project-desc">
               <div class="arrow-button">
-                <div class="arrowstem"></div>
-                <div class="arrowhead"></div>
+                <div class="arrow"></div>
               </div>
               <h2>Defining the international law landscape</h2>
               <p><span class="small-header">Cito Energy Law</span></p>
@@ -194,8 +192,7 @@
             <img class="object-fit-cover" src="img/kidco-work.jpg" alt="Kidco Construction">
             <div class="project-desc">
               <div class="arrow-button">
-                <div class="arrowstem"></div>
-                <div class="arrowhead"></div>
+                <div class="arrow"></div>
               </div>
               <h2>Constructing a full service offering</h2>
               <p><span class="small-header">Kidco Construction</span></p>
@@ -208,8 +205,7 @@
             <img class="object-fit-cover" src="img/yoga-santosha-work.jpg" alt="Yoga Santosha Website">
             <div class="project-desc">
               <div class="arrow-button">
-                <div class="arrowstem"></div>
-                <div class="arrowhead"></div>
+                <div class="arrow"></div>
               </div>
               <h2>Combining traditional and modern wellness</h2>
               <p><span class="small-header">Yoga Santosha</span></p>
@@ -233,7 +229,7 @@
 
     <!-- ======================================================= Social Icons -->
 
-    <div class="social-icons">
+    <div class="page-section-less-padding social-icons">
       <img class="footer-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo">
       <ul class="icon-grp">
         <li>@studio_forum</li>
@@ -278,7 +274,7 @@
       <div class="float-1-4-box">
           
         <a href="#!">
-          <div class="mint-hover-img">
+          <div class="insta-icon">
             <img src="img/insta_1.jpg" class="social-thumb" alt="mobile app Instagram Video">
           </div>
         </a>
