Code Cleanup for validation

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
   <a href="#!"><img class="sf-logo" src="img/studio-forum-logo.png" alt="Studio Forum Logo"></a>
 
 
-
-
-  <!-- everything below this is content hidden by nav when open 
+  <!-- everything below this is content hidden by nav or pop-up when open 
   ========================================================================================= -->
   <main id="page-content"> 
 
@@ -77,7 +75,7 @@
       <div id="left-bar-social">
         <a href="#!"><div class="insta-icon-grey"></div></a>
         <a href="#!"><div class="tw-icon-grey"></div></a>
-        <a href="#!"><div class="fb-icon"></div></a>
+        <a href="#!"><div class="fb-icon-grey"></div></a>
       </div>
 
       <div id="left-bar-email">
@@ -237,7 +235,7 @@
         <li><a href="#!"><div class="twitter-icon"></div></a></li>
         <li><a href="#!"><div class="linkedin-icon"></div></a></li>
         <li><a href="#!"><div class="fb-icon"></div></a></li>
-      </div>
+      </ul>
     </div>
 
 
@@ -246,7 +244,7 @@
 
       <section class="float-1-4-box">
         <p>We are a brand and communications studio in Calgary, Canada offering leading brand and design solutions. If you’re interested in a creative partner who’s as passionate about your company succeeding as you are, we should talk.</p>
-        <a href="#!"><span class="footer-link">info@studioforum.ca</span></a>
+        <span class="footer-link"><a href="#!">info@studioforum.ca</a></span>
       </section>
 
       <form class="float-1-4-box mailing-form" action="#" method="post">
@@ -254,8 +252,7 @@
         <p>Join our mailing list for all things brand, design, strategy and business</p>
         <input type="text" name="name" placeholder="name" required><br>
         <input type="text" name="email" placeholder="email" required>
-        <input type="radio">
-          <label type="radio">I would like to receive this e-newsletter</label>
+        <p><input type="radio"> I would like to receive this e-newsletter</p>
         <input type="submit" value="Submit">
       </form>
     
